src/main/java/de/tudortmund/cs/iltis/logiclib/io/parser/predicate/formula/pattern/PatternParser.java
// Generated from
// ../src/main/java/de/tudortmund/cs/iltis/logiclib/io/parser/predicate/formula/pattern/PatternParser.g4 by ANTLR 4.4
package de.tudortmund.cs.iltis.logiclib.io.parser.predicate.formula.pattern;

import de.tudortmund.cs.iltis.logiclib.io.reader.predicate.formula.pattern.PatternReaderProperties;
import de.tudortmund.cs.iltis.utils.io.parser.general.AbstractParser;
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PatternParser extends AbstractParser {
    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int COMPLEMENT = 1,
            NOFORMULA = 2,
            ANYFORMULA = 3,
            READ = 4,
            PLUS = 5,
            STAR = 6,
            AT = 7,
            SQUOTE = 8,
            NEG = 9,
            AND = 10,
            OR = 11,
            EQUIV = 12,
            IMPLIES = 13,
            FORALL = 14,
            EXISTS = 15,
            TRUE = 16,
            FALSE = 17,
            OBRACKET = 18,
            CBRACKET = 19,
            OPAREN = 20,
            CPAREN = 21,
            ARGUMENTSEP = 22,
            ISYMBOL = 23,
            OBRACE = 24,
            CBRACE = 25,
            RELINFIXISYMBOL = 26,
            FUNINFIXISYMBOL = 27,
            REVERSE_IMPLIES = 28,
            WS = 29,
            OPERATOR_OR_ISYMBOL = 30,
            MULTI = 31,
            CONTAINS = 32,
            DISTINCT = 33;
    public static final String[] tokenNames = {
        "<INVALID>",
        "COMPLEMENT",
        "NOFORMULA",
        "ANYFORMULA",
        "READ",
        "PLUS",
        "STAR",
        "AT",
        "SQUOTE",
        "NEG",
        "AND",
        "OR",
        "EQUIV",
        "IMPLIES",
        "FORALL",
        "EXISTS",
        "TRUE",
        "FALSE",
        "OBRACKET",
        "CBRACKET",
        "OPAREN",
        "CPAREN",
        "ARGUMENTSEP",
        "ISYMBOL",
        "OBRACE",
        "CBRACE",
        "RELINFIXISYMBOL",
        "FUNINFIXISYMBOL",
        "REVERSE_IMPLIES",
        "WS",
        "OPERATOR_OR_ISYMBOL",
        "MULTI",
        "CONTAINS",
        "DISTINCT"
    };
    public static final int RULE_initFormula = 0,
            RULE_initTerm = 1,
            RULE_formula = 2,
            RULE_superformula = 3,
            RULE_subformulaOrS = 4,
            RULE_subformula = 5,
            RULE_notInfixSubformula = 6,
            RULE_subformulae = 7,
            RULE_atomarSubformula = 8,
            RULE_namedFormula = 9,
            RULE_namedSubformula = 10,
            RULE_subformulaWithName = 11,
            RULE_prefixSubformula = 12,
            RULE_infixSubformula = 13,
            RULE_termOrS = 14,
            RULE_term = 15,
            RULE_notInfixTerm = 16,
            RULE_terms = 17,
            RULE_atomarTerm = 18,
            RULE_prefixTerm = 19,
            RULE_namedTerm = 20,
            RULE_infixTerm = 21,
            RULE_iSymbol = 22,
            RULE_name = 23;
    public static final String[] ruleNames = {
        "initFormula",
        "initTerm",
        "formula",
        "superformula",
        "subformulaOrS",
        "subformula",
        "notInfixSubformula",
        "subformulae",
        "atomarSubformula",
        "namedFormula",
        "namedSubformula",
        "subformulaWithName",
        "prefixSubformula",
        "infixSubformula",
        "termOrS",
        "term",
        "notInfixTerm",
        "terms",
        "atomarTerm",
        "prefixTerm",
        "namedTerm",
        "infixTerm",
        "iSymbol",
        "name"
    };

    @Override
    public String getGrammarFileName() {
        return "PatternParser.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    private PatternReaderProperties properties = PatternReaderProperties.createDefault();

    public void setProperties(PatternReaderProperties props) {
        if (props == null) throw new IllegalArgumentException("props must not be null");
        properties = props;
    }

    public PatternReaderProperties getProperties() {
        return properties;
    }

    public PatternParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class InitFormulaContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(PatternParser.EOF, 0);
        }

        public FormulaContext formula() {
            return getRuleContext(FormulaContext.class, 0);
        }

        public InitFormulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_initFormula;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitInitFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitFormulaContext initFormula() throws RecognitionException {
        InitFormulaContext _localctx = new InitFormulaContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_initFormula);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                formula();
                setState(49);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class InitTermContext extends ParserRuleContext {
        public TermContext term() {
            return getRuleContext(TermContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(PatternParser.EOF, 0);
        }

        public InitTermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_initTerm;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitInitTerm(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitTermContext initTerm() throws RecognitionException {
        InitTermContext _localctx = new InitTermContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_initTerm);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(51);
                term();
                setState(52);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FormulaContext extends ParserRuleContext {
        public SubformulaContext subformula() {
            return getRuleContext(SubformulaContext.class, 0);
        }

        public SuperformulaContext superformula() {
            return getRuleContext(SuperformulaContext.class, 0);
        }

        public FormulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_formula;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FormulaContext formula() throws RecognitionException {
        FormulaContext _localctx = new FormulaContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_formula);
        try {
            setState(56);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(54);
                        superformula();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(55);
                        subformula();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SuperformulaContext extends ParserRuleContext {
        public SuperformulaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_superformula;
        }

        public SuperformulaContext() {}

        public void copyFrom(SuperformulaContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class OrLeadingNoFormulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public List<TerminalNode> OR() {
            return getTokens(PatternParser.OR);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public TerminalNode OR(int i) {
            return getToken(PatternParser.OR, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public OrLeadingNoFormulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitOrLeadingNoFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AlternativeContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext subformula;
        public List<SubformulaContext> further = new ArrayList<SubformulaContext>();

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public List<TerminalNode> PLUS() {
            return getTokens(PatternParser.PLUS);
        }

        public TerminalNode PLUS(int i) {
            return getToken(PatternParser.PLUS, i);
        }

        public AlternativeContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAlternative(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AndLeadingNoFormulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public TerminalNode AND(int i) {
            return getToken(PatternParser.AND, i);
        }

        public List<TerminalNode> AND() {
            return getTokens(PatternParser.AND);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public AndLeadingNoFormulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitAndLeadingNoFormula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class OrLeadingSubformulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public List<TerminalNode> OR() {
            return getTokens(PatternParser.OR);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public TerminalNode OR(int i) {
            return getToken(PatternParser.OR, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public OrLeadingSubformulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitOrLeadingSubformula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ImpliesContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext second;

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public TerminalNode IMPLIES() {
            return getToken(PatternParser.IMPLIES, 0);
        }

        public ImpliesContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitImplies(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class EquivContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext second;

        public TerminalNode EQUIV() {
            return getToken(PatternParser.EQUIV, 0);
        }

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public EquivContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitEquiv(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class AndLeadingSubformulaContext extends SuperformulaContext {
        public SubformulaOrSContext firsts;
        public SubformulaOrSContext subformulaOrS;
        public List<SubformulaOrSContext> furthers = new ArrayList<SubformulaOrSContext>();

        public List<SubformulaOrSContext> subformulaOrS() {
            return getRuleContexts(SubformulaOrSContext.class);
        }

        public TerminalNode AND(int i) {
            return getToken(PatternParser.AND, i);
        }

        public List<TerminalNode> AND() {
            return getTokens(PatternParser.AND);
        }

        public TerminalNode NOFORMULA(int i) {
            return getToken(PatternParser.NOFORMULA, i);
        }

        public SubformulaOrSContext subformulaOrS(int i) {
            return getRuleContext(SubformulaOrSContext.class, i);
        }

        public List<TerminalNode> NOFORMULA() {
            return getTokens(PatternParser.NOFORMULA);
        }

        public AndLeadingSubformulaContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor)
                        .visitAndLeadingSubformula(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MultiConstraintContext extends SuperformulaContext {
        public SubformulaContext first;
        public SubformulaContext subformula;
        public List<SubformulaContext> further = new ArrayList<SubformulaContext>();

        public List<TerminalNode> MULTI() {
            return getTokens(PatternParser.MULTI);
        }

        public List<SubformulaContext> subformula() {
            return getRuleContexts(SubformulaContext.class);
        }

        public SubformulaContext subformula(int i) {
            return getRuleContext(SubformulaContext.class, i);
        }

        public TerminalNode MULTI(int i) {
            return getToken(PatternParser.MULTI, i);
        }

        public MultiConstraintContext(SuperformulaContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitMultiConstraint(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SuperformulaContext superformula() throws RecognitionException {
        SuperformulaContext _localctx = new SuperformulaContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_superformula);
        int _la;
        try {
            int _alt;
            setState(134);
            switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                case 1:
                    _localctx = new AlternativeContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(58);
                        ((AlternativeContext) _localctx).first = subformula();
                        setState(61);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(59);
                                    match(PLUS);
                                    setState(60);
                                    ((AlternativeContext) _localctx).subformula = subformula();
                                    ((AlternativeContext) _localctx)
                                            .further.add(
                                                    ((AlternativeContext) _localctx).subformula);
                                }
                            }
                            setState(63);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == PLUS);
                    }
                    break;
                case 2:
                    _localctx = new MultiConstraintContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(65);
                        ((MultiConstraintContext) _localctx).first = subformula();
                        setState(68);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(66);
                                    match(MULTI);
                                    setState(67);
                                    ((MultiConstraintContext) _localctx).subformula = subformula();
                                    ((MultiConstraintContext) _localctx)
                                            .further.add(
                                                    ((MultiConstraintContext) _localctx)
                                                            .subformula);
                                }
                            }
                            setState(70);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == MULTI);
                    }
                    break;
                case 3:
                    _localctx = new AndLeadingSubformulaContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(72);
                        ((AndLeadingSubformulaContext) _localctx).firsts = subformulaOrS();
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(73);
                                    match(AND);
                                    setState(76);
                                    switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                                        case 1:
                                            {
                                                setState(74);
                                                ((AndLeadingSubformulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((AndLeadingSubformulaContext) _localctx)
                                                        .furthers.add(
                                                                ((AndLeadingSubformulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case 2:
                                            {
                                                setState(75);
                                                match(NOFORMULA);
                                            }
                                            break;
                                    }
                                }
                            }
                            setState(80);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == AND);
                    }
                    break;
                case 4:
                    _localctx = new AndLeadingNoFormulaContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(84);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1:
                                    {
                                        {
                                            setState(82);
                                            match(NOFORMULA);
                                            setState(83);
                                            match(AND);
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(86);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                        } while (_alt != 2
                                && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                        setState(88);
                        ((AndLeadingNoFormulaContext) _localctx).firsts = subformulaOrS();
                        setState(96);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == AND) {
                            {
                                {
                                    setState(89);
                                    match(AND);
                                    setState(92);
                                    switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                                        case 1:
                                            {
                                                setState(90);
                                                ((AndLeadingNoFormulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((AndLeadingNoFormulaContext) _localctx)
                                                        .furthers.add(
                                                                ((AndLeadingNoFormulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case 2:
                                            {
                                                setState(91);
                                                match(NOFORMULA);
                                            }
                                            break;
                                    }
                                }
                            }
                            setState(98);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 5:
                    _localctx = new OrLeadingSubformulaContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                    {
                        setState(99);
                        ((OrLeadingSubformulaContext) _localctx).firsts = subformulaOrS();
                        setState(105);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(100);
                                    match(OR);
                                    setState(103);
                                    switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                                        case 1:
                                            {
                                                setState(101);
                                                ((OrLeadingSubformulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((OrLeadingSubformulaContext) _localctx)
                                                        .furthers.add(
                                                                ((OrLeadingSubformulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case 2:
                                            {
                                                setState(102);
                                                match(NOFORMULA);
                                            }
                                            break;
                                    }
                                }
                            }
                            setState(107);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == OR);
                    }
                    break;
                case 6:
                    _localctx = new OrLeadingNoFormulaContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                    {
                        setState(111);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1:
                                    {
                                        {
                                            setState(109);
                                            match(NOFORMULA);
                                            setState(110);
                                            match(OR);
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(113);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                        } while (_alt != 2
                                && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                        setState(115);
                        ((OrLeadingNoFormulaContext) _localctx).firsts = subformulaOrS();
                        setState(123);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == OR) {
                            {
                                {
                                    setState(116);
                                    match(OR);
                                    setState(119);
                                    switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                                        case 1:
                                            {
                                                setState(117);
                                                ((OrLeadingNoFormulaContext) _localctx)
                                                                .subformulaOrS =
                                                        subformulaOrS();
                                                ((OrLeadingNoFormulaContext) _localctx)
                                                        .furthers.add(
                                                                ((OrLeadingNoFormulaContext)
                                                                                _localctx)
                                                                        .subformulaOrS);
                                            }
                                            break;
                                        case 2:
                                            {
                                                setState(118);
                                                match(NOFORMULA);
                                            }
                                            break;
                                    }
                                }
                            }
                            setState(125);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                    break;
                case 7:
                    _localctx = new ImpliesContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                    {
                        setState(126);
                        ((ImpliesContext) _localctx).first = subformula();
                        setState(127);
                        match(IMPLIES);
                        setState(128);
                        ((ImpliesContext) _localctx).second = subformula();
                    }
                    break;
                case 8:
                    _localctx = new EquivContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                    {
                        setState(130);
                        ((EquivContext) _localctx).first = subformula();
                        setState(131);
                        match(EQUIV);
                        setState(132);
                        ((EquivContext) _localctx).second = subformula();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SubformulaOrSContext extends ParserRuleContext {
        public SubformulaeContext subformulae() {
            return getRuleContext(SubformulaeContext.class, 0);
        }

        public SubformulaContext subformula() {
            return getRuleContext(SubformulaContext.class, 0);
        }

        public SubformulaOrSContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_subformulaOrS;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PatternParserVisitor)
                return ((PatternParserVisitor<? extends T>) visitor).visitSubformulaOrS(this);
            else return visitor.visitChildren(this);
        }
    }
